fixed spacing issue

--- a/src/dpr/components/accordion/style.scss
+++ b/src/dpr/components/accordion/style.scss
@@ -18,7 +18,6 @@
   .govuk-details__text {
     border-left: none;
     border-bottom: 1px Solid govuk-colour("mid-grey");
-    margin-top: 10px;
     padding: 15px 0px;
   }
 }
