--- a/src/dpr/components/filters/style.scss
+++ b/src/dpr/components/filters/style.scss
@@ -29,7 +29,7 @@
 }
 
 .filter-actions {
-  margin-top: 10px;
+  margin-top: 15px;
   height: 40px;
 
   @media(max-width: 768px) {
